-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 16, 17, 18, 19, 20
-
Component/s: client-libs
-
b02
-
windows_10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8313714 | 17.0.10-oracle | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
| JDK-8316573 | 17.0.10 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8313715 | 11.0.22-oracle | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
| JDK-8316713 | 11.0.22 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8314496 | 8u401 | Renjith Kannath Pariyangad | P4 | Resolved | Fixed | b01 |
import java.awt.BorderLayout;
import java.awt.Button;
import java.awt.Frame;
import java.awt.HeadlessException;
import java.awt.Menu;
import java.awt.MenuBar;
import java.awt.Panel;
public class WindowsBorderLayoutMenuPack extends Frame {
public WindowsBorderLayoutMenuPack() throws HeadlessException {
setLayout(new BorderLayout());
MenuBar mb = new MenuBar();
Menu m = new Menu("Menu");
mb.add(m);
setMenuBar(mb);
Panel panel = new Panel();
panel.add(new Button("Dummy Button B1"));
panel.add(new Button("Dummy Button B2"));
add(panel, BorderLayout.CENTER);
}
public static void main(String[] args) {
WindowsBorderLayoutMenuPack frame = new WindowsBorderLayoutMenuPack();
frame.setLocationRelativeTo(null);
frame.pack();
//frame.pack(); // uncomment to workaround the issue, only works if pack() called twice.
frame.setVisible(true);
}
}
- backported by
-
JDK-8313714 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
-
JDK-8313715 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
-
JDK-8314496 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
-
JDK-8316573 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
-
JDK-8316713 [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.
-
- Resolved
-
- relates to
-
JDK-8288325 [windows] Actual and Preferred Size of AWT Non-resizable frame are different
-
- Resolved
-
-
JDK-8288444 Remove the workaround for frame.pack() in ModalDialogTest
-
- Resolved
-
-
JDK-8288993 Make AwtFramePackTest generic by removing @requires tag
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/ce1602d1
-
Commit
openjdk/jdk17u-dev/d2045f9c
-
Commit
openjdk/jdk/bbaeacb5
-
Review
openjdk/jdk11u-dev/2138
-
Review
openjdk/jdk17u-dev/1743
-
Review
openjdk/jdk/9118