8265586: [windows] last button is not shown in AWT Frame with BorderLayout and MenuBar set.

Reviewed-by: aivanov, dmarkov, azvegint